<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heritage Mapper</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_wishlist">Wishlist</string>
    <string name="action_visited_list">Visited List</string>
    <string name="action_location_info">Location Info</string>
    <string name="action_about">About</string>
    <string name="edit_message">Enter Location</string>
    <string name="button_send">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map_test">MapTest</string>
    <string name="title_activity_display_message">Search Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="title_activity_visited_list">Visited</string>
    <string name="title_activity_location_info">Info</string>
    <string name="title_activity_seach">SeachActivity</string>
    <string name="location_info_name">Location Name</string>
    <string name="location_info_french_name">Location French Name</string>
    <string name="location_info_address">Location Address</string>
    <string name="location_info_city">Location City</string>
    <string name="location_info_province">Location Province</string>
    <string name="location_info_designation">Location Designation</string>
    <string name="location_info_plaque">Location Plaque</string>
    <string name="location_info_notes">Write notes</string>
    <string name="button_write">Write</string>
    <string name="location_checkbox_visited">Visited</string>
    <string name="location_checkbox_wishlist">Wishlist</string>
    <string name="gotoInfo">placeholder</string>
    <string name="search_result_1"></string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
