<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
    <!-- Wishlist, appear as action button -->
    <item android:id="@+id/action_wishlist"
          android:icon="@drawable/ic_action_view_as_list"
          android:title="@string/action_wishlist"
          android:showAsAction="ifRoom" />
    
    <!-- Visited list, appear as action button -->
    <item android:id="@+id/action_visited_list"
		   android:text="@string/action_visited_list"
          android:title="@string/action_visited_list"
          android:showAsAction="never" />
</menu>
